[web_export_view]: Added negative number recognition and date recognition pattern

--- a/web_export_view/AUTHORS.txt
+++ b/web_export_view/AUTHORS.txt
@@ -6,3 +6,4 @@ Lorenzo Battistini <lorenzo.battistini@agilebg.com>
 Stefan Rijnhart <stefan@therp.nl>
 Mariano Ruiz <mrsarm@gmail.com>
 Cristian Salamea <ovnicraft@gmail.com>
+Andrei Levin <andrei.levin@didotech.com>
