--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -10794,3 +10794,9 @@ msgstr "Impossibile da Emettere. Bisogna impostare nella fattura del Partner {pa
 #, python-format
 msgid "Impossible to Cancel, need to cancel Internal Number {number}"
 msgstr "Impossibile da Annullare. Bisogna bisogna prima cancellare il 'FORZA NUMERO' {number}"
+
+#. module: l10n_it_account
+#: code:addons/l10n_it_account/account/invoice.py:212
+#, python-format
+msgid "Impossible to Validate, there are just an invoice of {partner} that was just validate with number {invoice_number}"
+msgstr "Impossibile da Emettere. C'è gia la fattura del {partner} a cui è forzato il numero {invoice_number} da emettere prima"
