--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -450,7 +450,7 @@ msgstr "Gestione Fido"
 #. module: sale_order_confirm
 #: view:sale.order:0
 msgid "Packings"
-msgstr "Imballaggi"
+msgstr "Uscite di Magazzino"
 
 #. module: sale_order_confirm
 #: view:sale.order:0
