--- a/product_bom/i18n/it.po
+++ b/product_bom/i18n/it.po
@@ -207,3 +207,8 @@ msgstr "Distinta Base"
 #: field:product.product,prefered_supplier:0
 msgid "Prefered Supplier"
 msgstr "Fornitore Preferenziale"
+
+#. module: product_bom
+#: model:res.groups,name:product_bom.group_view_warehouse
+msgid "Product / View Warehouse availability"
+msgstr "Prodotto / Può vedere le disponibilità"
